plugins {
    id 'java'
    id 'maven-publish'
    id("com.gradleup.shadow") version "9.0.0-beta8"
}

apply plugin: 'java'

def group = 'me.theparanker.duel'
def artifact = 'duel-bukkit'

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
    options.release = 21
}

repositories {
    mavenCentral()

    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://repo.codemc.io/repository/maven-releases/' }
    maven { url 'https://repo.codemc.io/repository/maven-snapshots/' }
    maven { url 'https://repo.extendedclip.com/releases/' }
}

dependencies {
    compileOnly fileTree(dir: 'libs', include: ['*.jar'])

    compileOnly 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'

    implementation 'com.zaxxer:HikariCP:5.1.0'

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    implementation 'net.kyori:adventure-text-serializer-legacy:4.20.0'
}

tasks {
    compileJava {
        dependsOn clean
        options.encoding = 'UTF-8'
    }

    build {
        dependsOn shadowJar
        dependsOn publish
    }
}

shadowJar {
    archiveFileName = artifact + '-1.0.0.jar'
    minimize()
}

jar{
    archiveFileName = artifact + '-1.0.0.jar'
}

processResources {
    filteringCharset 'UTF-8'
    def commitId = 'git rev-parse --short HEAD'.execute().text.trim()
    expand 'GIT_COMMIT_HASH': commitId
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = group
            artifactId = artifact

            from components.java
        }
    }
}